1.999812 2018-03-17 pjacklam

 * Update the documentation of configuration parameters.

 * Convert t/03podcov.t -> t/release-pod-coverage.t.

 * Convert t/02pod.t -> t/release-pod.t.

 * Reformat CHANGES to match the specification in CPAN::Changes::Spec and
   CPAN::Meta::Spec.

 * Expand tabs to spaces and clean up whitepace.

 * Include tests that were previously commented out.

 * Use config() as a method, rather than a function. Also use config("xyz")
   rather than config()->{xyz}.

 * Use $LIB as the variable name for backend math library.

 * Import "carp" and "croak" from the Carp module.

 * Math::BigInt isa Exporter, so Math::BigInt should require Exporter.
   Math::BigFloat has Math::BigInt in @ISA, so it doesn't need to require
   Exporter.

 * Fix CPAN RT #120351 regarding bpow(). Add test.

 * Don't load Test::More when it isn't really needed. This speeds up processing
   of author test files when they are skipped.

 * Fix CPAN RT #120717 regarding tests now that '.' is not in @INC by default.

 * Fix CPAN RT #122756 regarding testing for 64 bit integer support.

 * Fix typo in one of the change log entries for version 1.999811.

1.999811 2017-03-15 pjacklam

 * Fix an old bug in the Math::BigFloat methods as_hex(), as_oct(), and
   as_bin() methods resulting in loss of accuracy. This bug was introduced in
   bug in Math-BigInt-1.76. Due to a naive copy and paste by me, and lack of
   tests, this bug was also present in the newer to_hex(), to_oct(), and
   to_bin() methods. This shows the bug, as it did not print "0xffff...":

       print Math::BigFloat -> from_hex("f" x 30) -> as_hex();

 * Fix incorrect formatting in the output from the Math::BigFloat methods
   to_hex(), to_oct(), and to_bin() when the output was zero. A prefix was
   added when it shouldn't have been.

 * Add tests to bigintpm.inc and bigfltpm.inc for better testing of as_hex(),
   as_oct(), and as_bin() as well as to_hex(), to_oct(), and to_bin().
